# documentbot-agent

./: .dockerignore  .env_sample  .gitignore  .windsurfrules  Makefile  README.md  backend.yaml  cloudbuild.yaml  compose-init.yaml  compose.yaml  docker-compose.yaml  frontend.yaml  next.config.js  package.json  pyproject.toml  repomix-output.md  requirements.txt  service.yaml  service_deployed.yaml  vercel.json
.github/actions/docker-image-handler/: action.yml
.github/workflows/: build.yml  main.yaml  terraform_destroy.yaml
api/: Dockerfile  main.py
app/: layout.tsx  page.tsx
app/chat/: ChatUI.tsx
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/docubot_agent/: .env.sample
backend/src/: main.py  requirements.txt
backend/src/docubot_agent/: main.py
backend/tests/: test_main.py
frontend/: Dockerfile
frontend/src/: next.config.js  package-lock.json  package.json  server.js  tailwind.config.js
frontend/src/app/chat/: ChatUI.tsx  page.tsx
terraform/application/: main.tf  variables.tf
terraform/bucket/: main.tf
terraform/init/: main.tf  variables.tf
