[project]
name = "nextjs-fastapi"
version = "0.2.0"
description = "Next.js + FastAPI application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.6",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2.post1",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "langgraph>=0.2.69",
    "pytest>=8.3.4",
    "tiktoken>=0.5.2",
    "unstructured>=0.12.3",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pypdf>=4.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api"]
