[project]
name = "documentbot-agent"
version = "0.1.0"
description = "Documentation Agent API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.28.0",
    "python-dotenv==1.0.1",
    "langchain>=0.1.12",
    "langchain-openai>=0.0.8",
    "pydantic>=2.6.4",
    "langchain-core>=0.2.43",
    "python-multipart==0.0.6",
    "pydantic-settings==2.1.0",
    "langgraph>=0.2.69",
    "pytest>=8.0.0",
    "tiktoken>=0.5.2",
    "unstructured>=0.12.3",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pypdf>=4.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
]
