[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "langchain-core>=0.3.31",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "pydantic>=2.6.1",
    "python-multipart>=0.0.9",
    "chromadb>=0.4.22",
    "tiktoken>=0.6.0",
    "unstructured>=0.12.3",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pypdf>=4.0.1"
]
